--- a/templates/list.html
+++ b/templates/list.html
@@ -10,7 +10,7 @@
       <br/>
     {% for subdir in dirs[0]['subdirs']  %}
       <div class="preview">
-	<a href={{ dirs[0]['dir'] + subdir }}>{{ subdir }}</a>
+	<a href="{{ dirs[0]['dir'] + subdir }}/">{{ subdir }}</a>
       </div>
     {% endfor %}
   </div>
@@ -19,11 +19,18 @@
       {% set id = 1 %}
       {% for f in dirs[0]['files'] %}
       <li id={{ id }} class="item">
-      <div class="thumb">
-	<a href="/{{ md + dirs[0]['dir']+f['name'] }}">
-	  <img src="/{{ md + dirs[0]['dir']+'thumbs/'+f['name'] }}" alt="{{ f['name'] }}" title="{{ f['name'].lower().strip('.jpg') }}" border="0"/>
-	</a>
-      </div>
+        <h4>{{ f['name'][:-4] }}</h4>
+      	<div class="thumb">
+	  <a href="/{{ md + dirs[0]['dir']+'web/'+f['name'] }}">
+	    <img src="/{{ md + dirs[0]['dir']+'thumbs/'+f['name'] }}" alt="{{ f['name'] }}" title="{{ f['name'].lower().strip('.jpg') }}" border="0"/>
+          </a>
+	</div>
+	<div class="info">
+	  <a href="#{{ f['name'] }}">#</a>
+	  <a href="/{{ md + dirs[0]['dir']+f['name'] }}">image</a>
+	  <span class="embed">embed: <input class="embed-code" onClick="this.select()" value="&lt;a href=&quot;/{{ md + dirs[0]['dir'] }}#{{ f['name']|e }}&quot;&gt;&lt;img src=&quot;{{ url_for('static' , _external=True , filename = dirs[0]['dir']+'web/'+f['name'] ) }}&quot; alt=&quot;{{ f['name'][:-4]  }}&quot; title=&quot;{{ f['name'][:-4] }}&quot;&gt;&lt;/a&gt;"/>
+	  </span>
+	</div>
       </li>
       {% set id = id + 1 %}
       {% endfor %}
