--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,15 @@
 
+#nav {
+  clear: both;
+  display: block;
+}
+
+#main {
+  padding: 0px 40px 40px 40px ;
+}
+
 .pannels {
+  padding: 40px 0px 0px 0px ;
   display:block ;
   list-style: none;
   list-style-type: none;
@@ -8,6 +18,47 @@
   clear: both;
 }
 
+#dirs {
+  padding: 30px 0px 0px 0px ;
+  min-height: 25px;
+}
+
+.dir {
+  float: left;
+  margin-right: 10px;
+  overflow: hidden;
+  padding:0;
+  margin: 0;
+  max-width: 120px;
+  max-height: 120px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+.dir a {
+  position: relative ;
+  background-size: 100%;
+  width: 100px;
+  height: 80px;
+  display: block;
+  text-align: center;
+  text-decoration : none ;
+  padding-top: 20px ;
+}
+
+.dir a:hover,
+.dir a:focus {
+  text-decoration: none; 
+}
+
+.dir span {
+  font-size: 20px; 
+  font-weight: bold ;
+  background-color : white ;
+  padding: 2px 4px ;
+}
+
+
 .item {
   float: left;
   width: 300px;
@@ -15,6 +66,7 @@
   margin-right: 10px;
   overflow: hidden;
   text-align: left;
+  background ; #111 ;
 }
 
 .item h4 {
@@ -37,11 +89,15 @@
   color: #777;
 }
 
+.thumb{
+  background: black ;
+}
+
 .thumb img {
   display: table-cell;
   vertical-align: middle;
-  height: 240px ;
-  width:300px;
+  max-height: 240px ;
+  max-width:300px;
   overflow: hidden;
 }
 
