fix file extension handling

--- a/templates/list.html
+++ b/templates/list.html
@@ -9,13 +9,13 @@
 
   <div id="dirs">
 
-    <!--
+    
 
     <div>
 
       <a href="javascript:history.go(-1);">back</a>
     </div>
-    -->      
+          
     <br/>
     {% set n = 1 %}
     {% for subdir in dirs[0]['subdirs']  %}
@@ -35,7 +35,7 @@
       <h4>{{ f['name'][:-4] }}</h4>
       <div class="thumb">
 	<a href="{{ url_for( 'static', filename = 'pics/' + dirs[0]['dir']+'web/'+f['name']) }}">
-	  <img src="{{ url_for( 'static' , filename = 'pics/' + dirs[0]['dir']+'thumbs/'+f['name'] ) }}" alt="{{ f['name'] }}" title="{{ f['name'].lower().strip('.jpg') }}" border="0"/>
+	  <img src="{{ url_for( 'static' , filename = 'pics/' + dirs[0]['dir']+'thumbs/'+f['name'] ) }}" alt="{{ f['name'] }}" title="{{ f['name'].lower()[:-4] }}" border="0"/>
 	</a>
       </div>
       <div class="info">
@@ -48,8 +48,15 @@
       {% set id = id + 1 %}
       {% endfor %}
     </ul>
-    {{dirs}}
   </div>
+
 </div>
 {% endblock %}
+{% block footer %}
+<!--
+<div id="footer" style="clear:both;">
+  {{ dirs }}
+</div>
+-->
+{% endblock%}
 
