--- a/templates/list.html
+++ b/templates/list.html
@@ -20,7 +20,7 @@
     {% set n = 1 %}
     {% for subdir in dirs[0]['subdirs']  %}
     <div class="dir">
-      <a href="{{  subdir }}/" style="background-image: url({{ url_for( 'static' , filename=  'pics/' + dirs[0]['dir'] + subdir + '/thumbs/'  + dirs[n]['files'][0]['name'] ) }});">
+      <a href="{{ dirs[0]['dir'] + subdir }}/" style="background-image: url({{ url_for( 'static' , filename=  'pics/' + dirs[0]['dir'] + subdir + '/thumbs/'  + dirs[n]['files'][0]['name'] ) }});">
 	<span>{{ subdir }} </span>
       </a>
     </div>
@@ -29,7 +29,6 @@
   </div>
   <div id="pics">
     <ul id="items" class="pannels">
-      {% set id = 1 %}
       {% for f in dirs[0]['files'] %}
       <li id={{ f['name'] }} class="item">
       <h4>{{ f['name'][:-4] }}</h4>
@@ -45,7 +44,6 @@
 	</span>
       </div>
       </li>
-      {% set id = id + 1 %}
       {% endfor %}
     </ul>
   </div>
