improve error.html layout

--- a/templates/error.html
+++ b/templates/error.html
@@ -2,9 +2,18 @@
 {% block title %} ERROR {% endblock %}
 
 {% block content %}
+<div id="head">
+  <div class="title">                                                                                                                                                              
+    <font color="#0667C3" >{{sitename[:-1]}}</font><font color="#FF0080" >{{sitename[-1:]}}</font>
+  </div>
+</div>
 <div id="error">
   {{ message }}
 </div>
+<div id="back">
+  <a href="javascript:history.go(-1);">back</a>
+</div>
+
 {% endblock %}
 {% block footer %}
 <!--
