--- a/templates/list.html
+++ b/templates/list.html
@@ -14,23 +14,18 @@
   </div>
   {% if not current_user.is_authenticated() %}
   <div id="login">
-    <h4>Login</h4>
-    <form action="/login" method="post">
+    <form action="/login" method="post" class="login">
       <dl>
 	<dd><input type="hidden" name="next" value="{{ dirs[0]['dir'] }}"/></dd>
-	<dt>Username:</dt>
-	<dd><input type="text" name="username" /></dd>
-	<dt>Password:</dt>
-	<dd><input type="password"name="password" /></dd>
-	<dt>Remember:</dt>
-	<dd><input type="checkbox" name="remember"></dd>
-	<dd><input type="submit" value="Login" /></dd>
+	<dd><input type="text" name="username" placeholder="Username" /></dd>
+	<dd><input type="password"name="password" placeholder="Password" /></dd>
+	<dd>Remember:<input type="checkbox" name="remember"/> <input type="submit" class="hidden_button"/>
       </dl>
     </form>
   </div>
   {% endif %}
   {%if current_user.is_authenticated() %}
-  <div>
+  <div id="logout" class="login">
     <a href="/logout">Logout</a>
     
   </div>
