add video support via flowplayer

--- a/static/css/lightbox.css
+++ b/static/css/lightbox.css
@@ -111,12 +111,12 @@
 
 /* line 81, ../sass/lightbox.sass */
 .lb-prev:hover {
-  background: url(/static/prev.png) left 48% no-repeat;
+  background: url(/static/img/prev.png) left 48% no-repeat;
 }
 
 /* line 85, ../sass/lightbox.sass */
 .lb-next:hover {
-  background: url(/static/next.png) right 48% no-repeat;
+  background: url(/static/img/next.png) right 48% no-repeat;
 }
 
 /* line 88, ../sass/lightbox.sass */
