--- a/templates/upload.html
+++ b/templates/upload.html
@@ -15,6 +15,7 @@
       <dl>
 	<dt>Select files:</dt>
 	<dd><input type="file" multiple name="media" /></dd>
+	<dd><input type="text" name="folder" placeholder="Folder"/></dd>
 	<dd><input type="submit" value="Upload"/><dd>
       </dl>
     </form>
